please fix all of my errors

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "better-react-mathjax": "^2.1.0",
     "bootstrap": "^5.3.3",
+    "emotion": "^11.0.0",
     "firebase": "^11.2.0",
     "mathjax": "^3.2.2",
     "pdfjs-dist": "^5.1.91",
